# Model-V

./: .gitignore  README.md  generate_config.py  main.py  pyproject.toml  train.py
config/: __init__.py  config.py  dataset_config.py  wandb_config.py
config/templates/predict/examples/: MediarV_cA.json  MediarV_cAB.json  MediarV_cABSoma.json  MediarV_cB.json  MediarV_cSoma.json  MediarV_cytoCell.json  MediarV_cytoCellNuc.json  MediarV_cytoNuc.json
config/templates/train/examples/: MediarV_BCE_MSE_Loss_AdamW_CosineAnnealing_cA.json  MediarV_BCE_MSE_Loss_AdamW_CosineAnnealing_cAB.json  MediarV_BCE_MSE_Loss_AdamW_CosineAnnealing_cABSoma.json  MediarV_BCE_MSE_Loss_AdamW_CosineAnnealing_cB.json  MediarV_BCE_MSE_Loss_AdamW_CosineAnnealing_cSoma.json  MediarV_BCE_MSE_Loss_AdamW_CosineAnnealing_cytoCell.json  MediarV_BCE_MSE_Loss_AdamW_CosineAnnealing_cytoCellNuc.json  MediarV_BCE_MSE_Loss_AdamW_CosineAnnealing_cytoNuc.json
core/: __init__.py  segmentator.py
core/criteria/: __init__.py  base.py  bce.py  ce.py  mse.py
core/data/: __init__.py
core/data/transforms/: __init__.py  cell_aware.py  load_image.py  normalize_image.py  random_crop.py
core/logger/: __init__.py
core/losses/: __init__.py  base.py  bce.py  ce.py  mse.py  mse_with_bce.py
core/models/: __init__.py  mediar_v.py  model_v.py
core/optimizers/: __init__.py  adam.py  adamw.py  base.py  sgd.py
core/schedulers/: __init__.py  base.py  cosine_annealing.py  exponential.py  multi_step.py  step.py
core/utils/: measures.py
