[project]
name = "model-v"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "fastremap>=1.16.1",
    "fill-voids>=2.0.8",
    "imagecodecs>=2025.3.30",
    "matplotlib>=3.10.3",
    "monai>=1.4.0",
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "pydantic>=2.11.4",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "segmentation-models-pytorch>=0.5.0",
    "tabulate>=0.9.0",
    "tifffile>=2025.3.30",
    "torch==2.5.1+cu124",
    "torchaudio==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
